# rust-react-template

./: README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000000_create_users.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/handlers/: auth.rs  health.rs
backend/src/models/: user.rs
backend/src/repository/: mod.rs  user.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/services/: auth.rs  mod.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/forms/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useForm.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
